--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-query": "^1.2.9",
+    "@types/react-slick": "^0.23.10",
+    "@types/slick-carousel": "^1.6.37",
     "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
@@ -24,6 +26,8 @@
     "react-lazy-load-image-component": "^1.5.5",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
